# lean-agentic-alpha

./: .gitignore  README.md  pyproject.toml
archer-report/: archer-report.html  style.css
archer-report/artifacts/: A2_1.html  A2_1.json  A2_2.html  A2_2.json  A2_3.html  A2_3.json  A3_1.html  A3_1.json  A3_2.html  A3_2.json  A3_2_v2.html  A3_2_v2.json  A3_3.html  A3_3.json  A4_1.html  A4_1.json  A4_2.html  A4_2.json  A4_3.html  A4_3.json  A5_1.html  A5_1.json  A5_2.html  A5_2.json  A6_1.html  A6_1.json  A6_2.html  A6_2.json  A7.html  A7.json
lean_alpha/: __init__.py  cli.py  config.py  coordinator.py  cycle.py  gates.py  interactive.py  render_site.py  specialists.py  tools.py
lean_alpha/prompts/: A1_main.md  A2_1_historical.md  A2_2_structural.md  A2_3_forward.md  A3_1_macro.md  A3_2_sector.md  A3_3_regulatory.md  A4_1_peers.md  A4_2_edges.md  A4_3_ranking.md  A5_1_valuation.md  A5_2_validation.md  A6_1_weight.md  A6_2_impact.md  A7_evaluator.md  _artifact_protocol.md  _directive.md
tests/: test_cycle.py  test_dispatch_haiku.py  test_dispatch_mocked.py  test_gates.py  test_prompts.py  test_render_site.py  test_tools.py  test_validation.py
